# sonarqube-playground

./: .env  README.md  docker-compose-db.yaml  pyproject.toml  schema.sql  sonar-project.properties
src/sonarqube_playground/: __init__.py  __main__.py
